# jules-agent-sdk-python

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.es.md  README.ja.md  README.ko.md  README.md  pyproject.toml  setup.py
docs/: DEVELOPMENT.md  QUICKSTART.md  README.md
examples/: async_example.py  basic_usage.py  interactive_demo.py  plan_approval_example.py  simple_test.py
examples/go_simple_test/: go.mod  main.go
go_sdk/: activities.go  client.go  go.mod  jules.go  models.go  sessions.go  sources.go
jules-agent-sdk-go/: .gitignore  README.md  go.mod
jules-agent-sdk-go/examples/: basic_usage.go  simple_example.go
jules-agent-sdk-go/jules/: activities.go  client.go  config.go  errors.go  jules_client.go  models.go  sessions.go  sources.go
src/jules_agent_sdk/: __init__.py  activities.py  async_base.py  async_client.py  base.py  client.py  config.py  exceptions.py  models.py  sessions.py  sources.py
tests/: __init__.py  test_async_client.py  test_client.py  test_models.py
